bugfix: extracted legend so it is always visible

--- a/src/pages/menu/MenuPage.scss
+++ b/src/pages/menu/MenuPage.scss
@@ -84,4 +84,10 @@
   .NavBackButton {
     margin-bottom: 4rem;
   }
+
+  .legend-svg {
+    position: absolute;
+    bottom: 1rem;
+    right: 1rem;
+  }
 }
